src/test/ui/rfc-2632-const-trait-impl/staged-api.unstable.stderr
error: implementation has missing const stability attribute
  --> $DIR/staged-api.rs:18:1
   |
LL | / impl const MyTrait for Stable {
LL | |
LL | |
LL | |     fn func() {}
LL | | }
   | |_^

error: aborting due to previous error

